--- a/styling/index.html
+++ b/styling/index.html
@@ -17,9 +17,21 @@
       <h1>Vue Dynamic Styling</h1>
     </header>
     <section id="styling">
-      <div class="demo"></div>
-      <div class="demo"></div>
-      <div class="demo"></div>
+      <div
+        class="demo"
+        :class="{active:boxASelected}"
+        @click="boxSelect('a')"
+      ></div>
+      <div
+        class="demo"
+        :class="{active:boxBSelected}"
+        @click="boxSelect('b')"
+      ></div>
+      <div
+        class="demo"
+        :class="{active:boxCSelected}"
+        @click="boxSelect('c')"
+      ></div>
     </section>
   </body>
 </html>
