--- a/5-Project-first/index.html
+++ b/5-Project-first/index.html
@@ -29,12 +29,15 @@
           <div class="healthbar__value" :style="playerHealthBar"></div>
         </div>
       </section>
+      <section class="container" v-if="winner">
+        <h2>Game Over</h2>
+        <h3 v-if="winner === 'monster'">you lost!</h3>
+        <h3 v-else-if="winner === 'player'">you win</h3>
+        <h3 v-else>you draw</h3>
+      </section>
       <section id="controls">
         <button @click="attackMonster">ATTACK</button>
-        <button
-          :disabled="currentRound % 3 !== 0"
-          @click="specialAttackMonster"
-        >
+        <button :disabled="disableSpecial" @click="specialAttackMonster">
           SPECIAL ATTACK
         </button>
         <button @click="playerHeal">HEAL</button>
