creating root html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
         <a href="/2-events/index.html">Events</a>
       </div>
       <div>
-        <a href="/1-data rendering/index.html">Data Rendering</a>
+        <a href="/1-data-rendering/index.html">Data Rendering</a>
+      </div>
+      <div>
+        <a href="/3-styling/index.html">Styling with Vue</a>
+      </div>
+      <div>
+        <a href="/4-render-conditional/index.html">
+          Rendering Through Condition</a
+        >
+      </div>
+      <div>
+        <a href="/5-Project-first/index.html"> Player vs Monster Game</a>
       </div>
     </section>
   </body>
